--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -5,7 +5,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/owl_blue"
+    android:background="@color/white"
     tools:context=".MainActivity">
 
     <TextView
@@ -16,7 +16,7 @@
         android:fontFamily="sans-serif-black"
         android:text="@string/app_name"
         android:textAlignment="center"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,7 +31,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/headerLogin"
         app:layout_constraintStart_toEndOf="@+id/headerLogin"
         app:layout_constraintTop_toTopOf="@+id/headerLogin"
-        app:srcCompat="@drawable/avatarwhite" />
+        app:srcCompat="@drawable/avatar" />
 
     <Button
         android:id="@+id/loginButton"
@@ -60,7 +60,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:dampingRatio="1"
-        app:dotsColor="@color/red_600"
+        app:dotsColor="@color/black"
         app:dotsCornerRadius="5dp"
         app:dotsSize="16dp"
         app:dotsSpacing="6dp"
